--- a/src/styles.css
+++ b/src/styles.css
@@ -46,14 +46,7 @@ button {
   margin-right: 3px;
 }
 
-.quarter .hour,
-.minutes {
-  padding: 10px 0px;
-}
-
 .hour {
-  display: flex;
-  align-items: flex-end;
   font-weight: bold;
   font-size: 24px;
 }
@@ -61,12 +54,24 @@ button {
 .evening {
   font-size: 14px;
   font-weight: normal;
-  margin-bottom: 3px;
   margin-left: 2px;
 }
 
+.time-label {
+  display: flex;
+  align-items: center;
+}
+
+.current-time {
+  font-size: 14px;
+}
+
+.hour,
 .minutes {
-  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 45px;
 }
 
 .quarter-line {
@@ -90,6 +95,10 @@ button {
 .weekday-header {
   display: flex;
   justify-content: space-between;
+}
+
+.current {
+  color: blue;
 }
 
 .weekday-range {
